force-app/main/default/objects/Stock_Batch__c/Stock_Batch__c.object-meta.xml
<CustomObject>
    <label>Stock Batch</label>
    <pluralLabel>Stock Batches</pluralLabel>
    <nameField>
        <label>Stock Batch Name</label>
        <type>AutoNumber</type>
        <displayFormat>SB-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>