force-app/main/default/objects/Stock_Batch__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>