force-app/main/default/objects/Stock_Batch__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Batches</relationshipLabel>
    <relationshipName>Stock_Batches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>